
2008-07-15  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register: Do not say "no messages have been translated yet"
	when the domain is handled externally.  A few message tweaks.

	* bin/po-register: Move the grabbing of external stats further up,
	so the subject line can use them too (when they're available).

2008-07-14  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/registry.py: Allow uppercase letter at end of version number.

	* lib/registry.py: A hack to sort lprng-3.8.A correctly.

2008-07-11  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Remove the personal website links.

2008-04-01  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Make the license line mandatory.

2008-03-30  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Allow any team member to make submissions for
	unassigned and non-external domains.  This undoes the invisible
	auto-assignment.  We'll see how it goes.

2008-02-10  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Do not check for an FSF copyright line when this
	is explicitly switched off for a package via "<potcopyright>none".

2008-02-07  Benno Schulenberg  <benno@vertaalt.nl>

	* webgen/whydisclaim.html: Clarify meaning of disclaimer.

2008-01-11  Benno Schulenberg  <benno@vertaalt.nl>

	* webgen/leaders.all: The leaders' page rewritten.

2008-01-05  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Add a column to the domain index page mentioning
	whether a domain requires a disclaimer.  Suggested by LI Daobing.

2007-12-29  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Encode the translator name to get it printed right;
	always override name found in email with name from PO file.

	* bin/po-register: Add translator name to logbook entry.

2007-12-29  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/registry.py: Simplify regexes, remove recognition of charset,
	remove obsolete workaround for Nynorsk.

	* bin/tp-robot: Mention the file name when saying it is wrong,